# semikap

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  eslint.config.js  index.html  install.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  repo-visualizer.yml  tauri-release.yml  validate-signing.yml  validate-updater-secrets.yml
deploy/helm/tamias/: Chart.yaml  values.yaml
docs/: DEPLOY.md  MODEL_LOADING.md  PATHOLOGY.md  ROADMAP.md  SAM.md  SIGNING.md  TOTALSEGMENTATOR.md  UPDATER.md
examples/: README.md  liver_vessel_band.json  liver_vessel_band.onnx  liver_vessel_threshold.json  threshold_seg.json  threshold_seg.onnx
examples/pathology/: README.md  synthetic_he_512.json  tissue_mask.json  tissue_mask.onnx
public/: coi-config.js
scripts/: build-pathology-sample.mjs  build_liver_vessel_onnx.py  init-updater.mjs  release.mjs  serve.mjs
src/: index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  totalseg.rs
src/components/: AboutPanel.tsx  AnnotationPanel.tsx  AppShell.tsx  AxisCrosshairOverlay.tsx  DicomTagBrowser.tsx  ErrorBoundary.tsx  ExamplesPanel.tsx  ExportPanel.tsx  ExternalLink.tsx  GpuInfoPanel.tsx  HotkeyDispatcher.tsx  HotkeysPanel.tsx  IdcBrowser.tsx  InferencePanel.tsx  LayoutPanel.tsx  LoadedImagesList.tsx  LocalFilePicker.tsx  Logo.tsx  MeasurementsListPanel.tsx  MeasurementsOverlay.tsx  ModelPicker.tsx  OverlayControls.tsx  RoiOverlay.tsx  SamPanel.tsx  SamPromptOverlay.tsx  SecondarySeriesPicker.tsx  SegmentLabelsOverlay.tsx  SettingsPanel.tsx  SliceChipsOverlay.tsx  SyncPanel.tsx  ThemeToggle.tsx  ToolPicker.tsx  ToolsPanel.tsx  TotalSegmentatorPanel.tsx  UpdatePrompt.tsx  Viewer.tsx  ViewerToolbar.tsx  VolumePreview.tsx
src/components/pathology/: PathologyExamplesPanel.tsx  PathologyExportPanel.tsx  PathologyInferencePanel.tsx  PathologyModelPicker.tsx  PathologySamOverlay.tsx  PathologySamPanel.tsx  PathologyShell.tsx  PathologySlidePicker.tsx  PathologyTools.tsx  PathologyViewer.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Collapsible.tsx  Progress.tsx  Separator.tsx
src/lib/cornerstone/: bridge.ts
src/lib/desktop/: updater.ts
src/lib/diagnostics/: gpu.ts
src/lib/export/: dicom-seg.ts  nifti.ts  repro.ts
src/lib/fs/: audit.ts  examples.ts  filesystem.ts  idb-handle.ts  opfs.ts  pathology-examples.ts  reveal.ts
src/lib/idc/: dicomweb.ts
src/lib/inference/: manifest.ts  ort.ts  postprocess.ts  preprocess.ts  sliding-window.ts
src/lib/measurements/: voxel-stats.ts
src/lib/pathology/: manifest.ts  osd-viewer.ts
src/lib/sam/: cache.ts  loader.ts  postprocess.ts  preprocess-rgb.ts  preprocess.ts  session.ts  types.ts
src/types/: dcmjs.d.ts  global.d.ts  index.ts  pathology.ts
src/workers/: inference.worker.ts  pathology-inference.worker.ts  sam.worker.ts  totalseg.pyodide.worker.ts
tests/: measurements.test.ts  totalseg.loader.test.ts
(+19 files in other folders)
