[package]
name = "tamias"
version = "0.5.1"
description = "TAMIAS — Transparent locAl Medical Image AnalysiS Tool (desktop wrapper)"
authors = ["Ariorad Moniri"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ArioMoniri/semikap"

[lib]
name = "tamias_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
