[package]
name = "tamias"
version = "0.5.3"
description = "TAMIAS — Transparent locAl Medical Image AnalysiS Tool (desktop wrapper)"
authors = ["Ariorad Moniri"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ArioMoniri/semikap"

[lib]
name = "tamias_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools` enables the Web Inspector in PRODUCTION builds. Without it, users
# can't right-click → Inspect Element on the installed .app — meaning we can't
# diagnose worker / ORT failures unless we ship a debug build. The flag is
# already on in `tauri dev` regardless; this line just turns it on for `tauri
# build` too. Cost: a few hundred KB of WebKit inspector glue per binary.
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
